Updated Heading Tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game-container">
         <div class="game-card">
             <header>
-                <h1>welcome To</h1>
+                <h1>Welcome To</h1>
                 <h2>Quiz App</h2>
             </header>
 
@@ -35,7 +35,7 @@
                 <div class="status-bar">
                     <p>Score: <span id="score">0</span></p>
                     <p>High Score: <span id="high-score">0</span></p>
-                    <p>Time Left: <span id="time">30</span> seconds</p>
+                    <p>Time Left: <span id="time">60</span> seconds</p>
                 </div>
 
                 <button id="start" class="start-btn">Start Game</button>
